feat: add K8sGpt tool to make troubleshooting quicker
Signed-off-by: Umesh Kaul <umeshkaul@gmail.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -93,6 +93,7 @@ ARG TOOLS_KIND_VERSION
 ARG TOOLS_ISTIO_VERSION
 ARG TOOLS_ARGO_CD_VERSION
 ARG TOOLS_KUBECTL_VERSION
+ARG TOOLS_K8SGPT_VERSION
 ARG ARCH=${TARGETARCH:-amd64}
 
 #ENVIRONMENT VARIABLES
